Add reset button to test_yourself.html modals for user input values

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -406,6 +406,7 @@
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i>
             <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <h4>Your answers</h4>
+          <form>
           <div class="form-check">
             <p>Choose one option</p>
             <input class="form-check-input" type="radio" name="MapOneZone" id="dzCheckedMapOne" value="dzCheckedMapOne" checked>
@@ -425,8 +426,12 @@
               <span class="input-group-text">Your calculation</span>
             </div>
             <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapOne" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+            <div class="input-group-append">
+            <input type="reset" class="btn btn-danger" aria-label="reset your value">
+            </div>
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
+          </form>
           <div><span id="MapOneResultOne"></span></div>
           <div><span id="MapOneResultTwo"></span></div>
           <div><span id="MapOneResultThree"></span></div>
@@ -460,6 +465,7 @@
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i>
             <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <h4>Your answers</h4>
+          <form>
           <div class="form-check">
             <p>Choose one option</p>
             <input class="form-check-input" type="radio" name="MapTwoZone" id="dzCheckedMapTwo" value="dzCheckedMapTwo" checked>
@@ -479,8 +485,12 @@
               <span class="input-group-text">Your calculation</span>
             </div>
             <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapTwo" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+             <div class="input-group-append">
+            <input type="reset" class="btn btn-danger" aria-label="reset your value">
+            </div>
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
+          </form>
           <div><span id="MapTwoResultOne"></span></div>
           <div><span id="MapTwoResultTwo"></span></div>
           <div><span id="MapTwoResultThree"></span></div>
@@ -514,6 +524,7 @@
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i>
             <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <h4>Your answers</h4>
+          <form>
           <div class="form-check">
             <p>Choose one option</p>
             <input class="form-check-input" type="radio" name="MapThreeZone" id="dzCheckedMapThree" value="dzCheckedMapThree" checked>
@@ -533,8 +544,12 @@
               <span class="input-group-text">Your calculation</span>
             </div>
             <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapThree" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+             <div class="input-group-append">
+            <input type="reset" class="btn btn-danger" aria-label="reset your value">
+            </div>
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
+          </form>
           <div><span id="MapThreeResultOne"></span></div>
           <div><span id="MapThreeResultTwo"></span></div>
           <div><span id="MapThreeResultThree"></span></div>
@@ -568,6 +583,7 @@
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i>
             <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <h4>Your answers</h4>
+          <form>
           <div class="form-check">
             <p>Choose one option</p>
             <input class="form-check-input" type="radio" name="MapFourZone" id="dzCheckedMapFour" value="dzCheckedMapFour" checked>
@@ -587,8 +603,12 @@
               <span class="input-group-text">Your calculation</span>
             </div>
             <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapFour" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+             <div class="input-group-append">
+            <input type="reset" class="btn btn-danger" aria-label="reset your value">
+            </div>
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
+          </form>
           <div><span id="MapFourResultOne"></span></div>
           <div><span id="MapFourResultTwo"></span></div>
           <div><span id="MapFourResultThree"></span></div>
@@ -622,6 +642,7 @@
           <p>You can close this pop-up at any time, if you want to get this scenario's data back, click the <i class="fas fa-charging-station fa2x"></i>
             <em> Current</em> button. Or, if you would like a new scenario, close this pop-up and click <i class="fas fa-car-battery"></i><em> Scene</em>.</p>
           <h4>Your answers</h4>
+          <form>
           <div class="form-check">
             <p>Choose one option</p>
             <input class="form-check-input" type="radio" name="MapFiveZone" id="dzCheckedMapFive" value="dzCheckedMapFive" checked>
@@ -641,8 +662,12 @@
               <span class="input-group-text">Your Calculation</span>
             </div>
             <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapFive" class="form-control" min="0" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+             <div class="input-group-append">
+            <input type="reset" class="btn btn-danger" aria-label="reset your value">
+            </div>
             <small>Then click on the <em>submit</em> button below to check your answers.</small>
           </div>
+          </form>
           <div><span id="MapFiveResultOne"></span></div>
           <div><span id="MapFiveResultTwo"></span></div>
           <div><span id="MapFiveResultThree"></span></div>
